fixes layout issues in all dogs page

--- a/src/main/resources/public/css/app.css
+++ b/src/main/resources/public/css/app.css
@@ -191,3 +191,8 @@ a.navbar-brand {
   background-color: rgba(0, 0, 0, 0.25);
   border-radius: 25px;
 }
+
+p.details {
+    height: 40px;
+    overflow: hidden;
+  }
